# aws-ecs-service-recommendations

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AWSSession.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ECSMonitoringCrossAccountRole.json  Makefile  README.md  SECURITY.md  TECH_README.md  add_account.html  ai_recommender.py  ai_recommender_service.py  alb-listener-rule.yaml  analytics_dashboard.html  app.py  auth.py  build.sh  cluster_dashboard.html  cognito-setup.yaml  config.py  cross-account-iam-role.yaml  dashboard.html  dashboard_comparison.html  dashboard_optimized.html  dashboard_optimized_fixed.html  docker-compose.yml  ecs_monitor.py  iam-policies.json  knowledge_db.py  logger_config.py  pyproject.toml  recommendations_dashboard.html  requirements-dev.txt  requirements.txt  script-dev.sh  script.sh
.amazonq/rules/: ReadMeUpdate.md
.github/workflows/: ci.yml
dynamodb_data_example/: cluster_data.json  overall_recommendation_data.json
